# Discord-music-bot

./: .gitignore  Dockerfile  bot.py  config.py  docker-compose.debug.yml  docker-compose.yml  exceptions.py  main.py  makefile  models.py  music_handler.py  pyproject.toml  requirements.txt  settings.py  spotify.py  utils.py
bot/: factory.py
bot/cogs/: music.py  system.py
config/: settings.py
core/: exceptions.py  logging.py  models.py
music_clients/: spotify.py
music_downloaders/: base.py  yandex.py  youtube.py
music_info_loaders/: spotify.py
services/: download.py  message.py  music.py  player.py  queue.py
services/api_clients/: spotify.py
services/music_clients/: spotify.py
services/music_downloaders/: base.py  yandex.py  youtube.py
services/music_info_loaders/: spotify.py
