[tool.poetry]
name = "wire-be-main-service"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = ".tmp/ruff-cache"
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", "W", # Pycodestyle
    "I", # Issort
    "Q", # flake8-quotes
    "COM", # flake8-commas
    "N", # pep8-naming N818
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "T20", # flake8-print
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "B", # flake8-bugbear
    "DTZ", # flake8-datetimez
    "PT", # flake8-pytest-style
]
ignore = [
    "N818", # exception name
    "UP038", # isinstance(x, (int, float)) to isinstance(x, int | float)
    "SIM108", # Ternanry operator
]

[tool.ruff.lint.per-file-ignores]
"apps/action/data/*" = ["E501"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
