[tool.poetry]
name = "discord-music-bot"
version = "0.1.0"
description = ""
authors = [""]

[tool.ruff]
cache-dir = ".tmp/ruff-cache"
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "F", # Pyflakes
    "E", "W", # Pycodestyle
    "I", # Issort
    "Q", # flake8-quotes
    "COM", # flake8-commas
    "N", # pep8-naming N818
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "T20", # flake8-print
    "ISC", # flake8-implicit-str-concat
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "B", # flake8-bugbear
    "DTZ", # flake8-datetimez
    "PT", # flake8-pytest-style
]
ignore = [
    "N818", # exception name
    "UP038", # isinstance(x, (int, float)) to isinstance(x, int | float)
    "SIM108", # Ternanry operator
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
