[project]
name = "discord-music-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord>=2.3.2",
    "psutil>=7.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pynacl>=1.6.1",
    "python-dateutil>=2.9.0.post0",
    "yandex-music>=2.2.0",
    "yt-dlp>=2025.12.8",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
]

[tool.ruff]
cache-dir = ".tmp/ruff-cache"
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "PLR2004",
    "D",
    "RUF012",
    "DJ008",
    "COM812",
    "EXE002",
    "TRY301",
    "RUF001",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.mypy]
disable_error_code = ["import-untyped", "import-not-found"]
